--- a/home.html
+++ b/home.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name = "viewport" content = "with=device-width, initial-scale = 1.0">
         <title>NB: Home</title>
         <link rel = "stylesheet" href = "homeStyle.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-        </head>
+    </head>
     <body>
         <section class = "header">
             <nav>
@@ -20,32 +19,7 @@
                     </ul>
                 </div>
             </nav>
-            <p>Since you like My Little Pony: Friendship Is Magic,</p>
-            <div class = "numOne">
-                <h1>#1</h1>
-                <h2 class = "toggle-header">My Little Pony: Something</h1>
-                <div class = "toggle-content">
-                    <p>Journey to the enchanted land of Equestria, where unicorn Twilight Sparkle and her pals have adventures and learn valuable lessons about friendship.</p>
-                </div>
-            </div>
-            <div class = "numTwo">
-                <h1>#2</h1>
-                <h2 class = "toggle-header">My Little Pony: Someone</h2>
-                <div class = "toggle-content">
-                    <p>What the sigma what the sigma what the sigma what the sigma what the sigma what the sigma what the sigma what the sigma what the sigma what the sigma.</p>
-                </div>
-            </div>
-        </section>
+            <h1>Finding great movies for <br> your taste made easy.</h1>
+        </class>
     </body>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-        const header = document.querySelector(".toggle-header");
-        const content = document.querySelector(".toggle-content");
-
-        header.addEventListener("click", function () {
-            content.style.display = content.style.display === "block" ? "none" : "block";
-        });
-        });
-    </script>
 </html>
