--- a/recommendation.html
+++ b/recommendation.html
@@ -1,3 +1,4 @@
+<!-- EVERYTHING HERE IS A HARDCODED DEMO -->
 <!DOCTYPE html>
 <html>
     <head>
@@ -20,26 +21,26 @@
                     </ul>
                 </div>
             </nav>
-            <p>Since you like My Little Pony: Friendship Is Magic,</p>
+            <p>Since you like Violet Evergarden,</p>
             <div class = "numOne">
                 <h1>#1</h1>
-                <h2 class = "toggle-header">My Little Pony: Something</h1>
+                <h2 class = "toggle-header">DEATH NOTE</h1>
                 <div class = "toggle-content">
-                    <p>Journey to the enchanted land of Equestria, where unicorn Twilight Sparkle and her pals have adventures and learn valuable lessons about friendship.</p>
+                    <p>Light Turner finds a supernatural notebook and uses it to mete <br> out death, attracting the attention of a detective, a demon and a girl in his class.</p>
                 </div>
             </div>
             <div class = "numTwo">
                 <h1>#2 </h1>
-                <h2 class = "toggle-header">My Little Pony: Someone</h2>
+                <h2 class = "toggle-header">Aggretsuko</h2>
                 <div class = "toggle-content">
-                    <p>What the sigma what the sigma what the sigma what the sigma what the sigma <br> what the sigma what the sigma what the sigma what the sigma what the sigma.</p>
+                    <p>Frustrated with her thankless office job, Retsuko the Red Panda copes <br> with her daily struggles by belting out death metal karaoke after work.</p>
                 </div>
             </div>
             <div class = "numThree">
                 <h1>#3</h1>
-                <h2 class = "toggle-header">Fortnite skibidi rizz</h2>
+                <h2 class = "toggle-header">Haikyu!!</h2>
                 <div class = "toggle-content">
-                    <p>WHAT THE SKIBIDI WHAT THE SKIBIDI WHAT THE SKIBIDI WHAT THE SKIBIDI WHAT THE SKIBIDI WHAT THE SKIBIDI WHAT THE SKIBIDI WHAT THE SKIBIDI WHAT THE SKIBIDI.</p>
+                    <p>Inspired by a championship match he sees on TV, junior high schooler <br> Hinata joins a volleyball club and begins training, despite his short height.</p>
                 </div>
             </div>
         </section>
